# elpis

./: .gitignore  README.md  pomme.py  pyproject.toml
.dev/: ANNOUNCE_SECURITY  PHASE 001  PLAN
.dev/peer/: PLAN 002
.dev/tracker/: ANNOUNCE_SECURITY  ENDPOINT_GUIDE  GUIDE
apps/peer/database/: __init__.py  db.py  models.py  pyproject.toml
apps/peer/database/migrations/models/: 0_20260121112904_init.py  1_20260121231542_update.py
apps/tracker/: db.sqlite3  pyproject.toml
apps/tracker/config/: settings.py
apps/tracker/core/: models.py  serializers.py  urls.py  views.py
apps/tracker/core/migrations/: 0001_initial.py  0002_remove_album_genres_remove_album_songs_and_more.py  0003_remove_album_created_at_remove_album_deleted_at_and_more.py
apps/tracker/ratelimit/: apps.py  decorators.py  models.py
apps/tracker/ratelimit/migrations/: 0001_initial.py  0002_rename_pommezs_endpoin_1f8211_idx_ratelimit_endpoin_643ba3_idx_and_more.py
