[project]
name = "elpis"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aerich>=0.9.2",
    "aiosqlite>=0.22.1",
    "dotenv>=0.9.9",
    "tortoise-orm>=0.25.3",
]

[tool.uv.workspace]
members = [
    "apps/tracker",
]

[tool.aerich]
tortoise_orm = "apps.peer.database.db.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."
